--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | Loopstudios landing page</title>
   <link rel="stylesheet" href="css/main.css">
+  <script src="js/menu.js" defer></script>
 </head>
 <body>
 
@@ -30,13 +31,13 @@
         <li class="nav__list-item"><a href="#">Support</a></li>
       </ul>
       <div class="nav__mobile">
-        <img src="./images/icon-hamburger.svg" alt="menu">
+        <img src="./images/icon-hamburger.svg" alt="menu" id="menuOpen">
         <div class="nav__mobile-wrapper">
           <div class="nav__mobile-wrapper__top">
             <div class="brand">
               <img src="./images/logo.svg" alt="logo" class="brand__img">
             </div>
-            <img src="./images/icon-close.svg" alt="close" class="close-icon">
+            <img src="./images/icon-close.svg" alt="close" class="close-icon" id="menuClose">
           </div>
           <ul class="nav__mobile__list">
             <li class="nav__mobile__list-item"><a href="#">About</a></li>
