animate hero text border and nav items

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
       </div>
     </div>
     <div class="hero__heading">
-      <div class="heading-primary">
+      <div class="heading-primary box">
+        <div class="box-helper"></div>
         Immersive experiences that deliver
       </div>
     </div>
