add underline animation mixin, creation card animations

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <!-- GOOGLE FONTS -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300;500&display=swap" rel="stylesheet">
 
   <!-- FONT AWESOME LIBRARY -->
   <script src="https://kit.fontawesome.com/9a34e91c28.js" crossorigin="anonymous"></script>
